<resources>
    <string name="app_name">AndroidBookShop</string>
    <string name="login">Bejelentkezés</string>
    <string name="password">Jelszó</string>
    <string name="name">Név</string>
    <string name="registration">Regisztráció</string>
    <string name="user_name">Felhasználónév</string>
    <string name="email">Email cím</string>
    <string name="re_password">Jelszó megerősítése</string>
    <string name="megsem">Mégsem</string>
    <string name="mobile_number">Telefonszám</string>
    <string name="address">Postai cím</string>
    <string name="seller">Eladó</string>
    <string name="customer">Vásárló</string>
    <string name="product_desc">Termék leírás</string>
    <string name="login_as_guest">Bejelentkezés vendégként</string>
    <string name="sign_in_with_google">Bejelentkezés Google fiókkal</string>
    <string-array name="phone_modes">
        <item>Otthoni</item>
        <item>Munkahelyi</item>
        <item>Mobil</item>
        <item>Egyéb</item>
    </string-array>
    <string name="web_client_id">98056518428-rdhcj2ci6chs09ks90r1jhtrfsqht63t.apps.googleusercontent.com</string>
    <string name="item_placeholder">Leírás</string>
    <string name="add_to_cart">Kosárba</string>
    <string name="item_information_placeholder">Információ a termékről</string>
    <string name="delete_item">Törlés</string>
    <string name="contentDescripption">képleírás</string>
    <string name="welcome_text">Üdvözöllek a BookShop applikációban!</string>

    <string-array name="shopping_item_names">
        <item>A háromtest-probléma</item>
        <item>Holly</item>
        <item>Az emberek meséje</item>
        <item>Utas és holdvilág</item>
        <item>Tóték</item>
        <item>A vége</item>
    </string-array>

    <string-array name="shopping_item_desc">
        <item>Írta: Cixin Liu</item>
        <item>Írta: Stephen King</item>
        <item>Írta: Láng Zsolt</item>
        <item>Írta: Szerb Antal</item>
        <item>Írta: Örkény István</item>
        <item>Írta: Bartis Attila</item>
    </string-array>

    <array name="shopping_item_rates">
        <item>3.9</item>
        <item>4.2</item>
        <item>3.6</item>
        <item>4.5</item>
        <item>5</item>
        <item>4</item>
    </array>

    <array name="shopping_item_images">
        <item>@drawable/haromtest</item>
        <item>@drawable/holly</item>
        <item>@drawable/az_emberek_meseje</item>
        <item>@drawable/utas_es_holdvilag</item>
        <item>@drawable/totek</item>
        <item>@drawable/a_vege</item>
    </array>

    <string-array name="shopping_item_price">
        <item>4500 Ft</item>
        <item>6200 Ft</item>
        <item>5200 Ft</item>
        <item>4780 Ft</item>
        <item>3990 Ft</item>
        <item>4760 Ft</item>
    </string-array>

</resources>