<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:textSize="30sp"
            android:textAlignment="center"
            android:paddingTop="40dp"
            android:paddingBottom="50dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/welcomeText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="26dp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="26dp"
            android:layout_marginHorizontal="20dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextUserName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="login"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="26dp"
            android:layout_marginHorizontal="20dp" />

        <Button
            android:id="@+id/loginButtonRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="register"
            android:text="@string/registration"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="26dp"
            android:layout_marginHorizontal="20dp" />

        <Button
            android:id="@+id/guestLoginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_as_guest"
            android:onClick="loginAsGuest"
            app:layout_constraintTop_toBottomOf="@+id/loginButtonRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="26dp"
            android:layout_marginHorizontal="20dp" />

        <Button
            android:id="@+id/googleSignInButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="loginWithGoogle"
            android:text="@string/sign_in_with_google"
            app:layout_constraintTop_toBottomOf="@+id/guestLoginButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="26dp"
            android:layout_marginHorizontal="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
